ADDED extra names

--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
             {name: "Ali", gender: "male"},
             {name: "Muaa'dh", gender: "male"},
             {name: "Ally-baba", gender: "male"},
+            {name: "Abdulhamid(mfer)", gender: "male"},
+            {name: "Goodness", gender: "male"},
+            {name: "Diablo", gender: "male"},
+            {name: "Diyau", gender: "male"},
+            {name: "Amaz", gender: "female"},
+            {name: "Wonderful", gender: "male"},
+            {name: "Amirah Lawal", gender: "male"},
+            {name: "Christian", gender: "male"},
+            {name: "Braids", gender: "male"},
+            {name: "Ammie-broski", gender: "male"},
+            {name: "Fatimah", gender: "male"},
+            {name: "Abdulmujeeb", gender: "male"},
+            {name: "Inioluwa", gender: "female"},
+            {name: "Abdullah", gender: "male"},
+            {name: "Coco-melon", gender: "male"},
+            {name: "Aremu Maymunah", gender: "male"},
+            {name: "Abdulsalam", gender: "male"}, 
+            {name: "Favour", gender: "male"},
+            {name: "Emmanuella", gender: "male"},
+            {name: "Olasubomi", gender: "male"},
+            {name: "Mahmud", gender: "female"},
+            {name: "Teslim", gender: "male"},
+            {name: "Peace", gender: "male"},
+            {name: "Daniel", gender: "male"}
         ];
 
          function randoms (arrs){
